syntax = "proto3";

package user_service;

import "google/protobuf/timestamp.proto";

option go_package = "grpc/v1/user_service";

message User {
    string id = 1;
    string username = 2;
    string email = 3;
    google.protobuf.Timestamp password_changed_at = 4;
    google.protobuf.Timestamp created_at = 5;
}
